@@ -599,6 +599,95 @@ public:
 		{return new(get(sizeof(T))) T;};
 };
 
+/**
+ * A templated class for a hash pager.  This creates objects from a pager
+ * pool when they do not already exist in the hash map.
+ * @author David Sugar <dyfet@gnutelephony.org>
+ */
+template <class T, unsigned M = 177>
+class keypager : public mempager
+{
+private:
+	NamedObject *idx[M];
+
+public:
+	/**
+	 * Create the object cache.
+	 * @param size of allocation units.
+	 */
+	inline keypager(size_t size) : mempager(size) {};
+
+	/**
+	 * Destroy the hash pager by purging the index chains and memory pools.
+	 */
+	inline ~keypager()
+		{NamedObject::purge(idx, M); mempager::purge();};
+
+	/**
+	 * Find a typed object derived from NamedObject in the hash map by name.
+	 * If the object is not found, it is created from the memory pool.
+	 * @param name to search for.
+	 * @return typed object if found through map or NULL.
+	 */
+	inline T *get(const char *name) const {
+		T *node = (static_cast<T*>(NamedObject::map(idx, name, M)));
+		if(!node) {
+			node = init<T>(static_cast<T*>(mempager::alloc(sizeof(T))));
+			node->NamedObject::add(idx, name, M);
+		}
+		return node;
+	}
+
+	/**
+	 * Find a typed object derived from NamedObject in the hash map by name.
+	 * If the object is not found, it is created from the pager pool.
+	 * @param name to search for.
+	 * @return typed object if found through map or NULL.
+	 */
+	inline T *operator[](const char *name) const
+		{return get(name);};
+
+	/**
+	 * Find first typed object in hash map to iterate.
+	 * @return first typed object or NULL if nothing in list.
+	 */
+	inline T *begin(void) const
+		{return static_cast<T*>(NamedObject::skip(idx, NULL, M));};
+
+	/**
+	 * Find next typed object in hash map for iteration.
+	 * @param current typed object we are referencing.
+	 * @return next iterative object or NULL if past end of map.
+	 */
+	inline T *next(T *current) const
+		{return static_cast<T*>(NamedObject::skip(idx, current, M));};
+
+	/**
+	 * Count the number of typed objects in our hash map.
+	 * @return count of typed objects.
+	 */
+	inline unsigned count(void) const
+		{return NamedObject::count(idx, M);};
+
+	/**
+	 * Convert our hash map into a linear object pointer array.  The
+	 * object pointer array is created from the heap and must be deleted
+	 * when no longer used.
+	 * @return array of typed named object pointers.
+	 */
+	inline T **index(void) const
+		{return NamedObject::index(idx, M);};
+
+	/**
+	 * Convert our hash map into an alphabetically sorted linear object 
+	 * pointer array.  The object pointer array is created from the heap 
+	 * and must be deleted when no longer used.
+	 * @return sorted array of typed named object pointers.
+	 */
+	inline T **sort(void) const
+		{return NamedObject::sort(NamedObject::index(idx, M));};
+}; 
+
 END_NAMESPACE
 
 #endif
