@@ -1,5 +1,6 @@
 from ucommon 3.2.0 to 3.2.1
-- added explicit add and remove for NamedObject to make keymap easier to use
+- added explicit add and remove for NamedObject to make keymap easier to use.
+- created new keypager type to allocate named objects on demand.
 
 from ucommon 3.1.2 to 3.2.0
 - fixed option crash when not defining a long option.
